results/5a6c7e6c1d2131e9ebb782025a680cce/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 5a6c7e6c1d2131e9ebb782025a680cce, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
